✅ Funciona registro de clientes

--- a/public/login.html
+++ b/public/login.html
@@ -12,6 +12,15 @@
       .fetched {
         display: inline-block;
       }
+      a {
+        margin-top: 8px;
+        color: #000;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #000;
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
@@ -56,6 +65,12 @@
           <button class="buscar-btn" type="submit">Iniciar Sesión</button>
           <span id="loginSpan"></span>
         </form>
+        <a href="http://localhost:3000/registrar-cliente-natural"
+          >Registrar cliente Natural</a
+        >
+        <a href="http://localhost:3000/registrar-cliente-juridico"
+          >Registrar cliente Juridico</a
+        >
       </div>
     </div>
     <script>
